[package]
name = "nws"
version = "0.1.0"
edition = "2021"
authors = ["ellis"]
description = "NWS API Client"
repository = "https://hg.rwest.io/nws"
readme = "README"

[dependencies]
tokio = "1.15.0"
reqwest = "0.11.9"
serde_json = "1.0.75"
serde = { version = "1.0.133", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.30"